Thu May  6 12:27:03 BST 2004 (njh)
----------------------------------
  * libclamav/mbox.c:	Ensure all attachements marked as RFC822 emails will
  			be recognised as email messages by libclamav/scanners.c
			and hence be scanned
  * clamav-milter:	Fixed boundary cases for streamMaxLength
			Warn if a clean file can't be removed from the
				quarantine

Thu May  6 11:34:40 CEST 2004 (tk)
----------------------------------
  * shared/output: logg: work around a problem with superfluous control
		   characters passed to (v)syslog (reported by
		   Chris Conn <cconn*abacom.com>)

Wed May  5 13:33:12 BST 2004 (trog)
-----------------------------------
  * libclamav/vba_extract.c: Do endian conversion in Word6 macro code.

Wed May  5 11:32:22 BST 2004 (trog)
-----------------------------------
  * libclamav/vba_extract.c: Add another Office2003 VBA signature.

Wed May  5 10:39:58 BST 2004 (njh)
----------------------------------
  * libclamav/text.c:	Removed the functionality of textClean, it isn't needed
  	in clamAV

Sun May  2 02:48:04 CEST 2004 (tk)
----------------------------------
  * libclamav: support files compressed with compress.exe (test/test1.msc)

Sat May  1 21:29:29 CEST 2004 (tk)
----------------------------------
  * clamd: stream scanner:
	+ scan exactly up to StreamMaxLength (patch by Joe Maimon
	  <jmaimon*ttec.com>)
	+ fix description leak on ReadTimeout (patch by Maxim Dounin
	  <mdounin*rambler-co.ru>)
  * contrib/trashscan: v. 0.12 (Trashware <trashware*gmx.de>)
  * libclamav: in block-encrypted mode scan a raw encrypted archive before
	       marking it as encrypted (requested by Andy Fiddaman
	       <clam*fiddaman.net>)

Thu Apr 29 21:59:36 CEST 2004 (tk)
----------------------------------
  * libclamav: detect more mail file types

Thu Apr 29 09:59:41 BST 2004 (njh)
----------------------------------
  * libclamav:		Tidied the handling of content disposition type:
  				better handling of out of memory
				right chop white space
