@@ -1,3 +1,7 @@
+Thu May  6 16:22:32 BST 2004 (trog)
+-----------------------------------
+  * libclamav/vba_extract.c: Fix fd leak in Word6 macro code.
+
 Thu May  6 12:27:03 BST 2004 (njh)
 ----------------------------------
   * libclamav/mbox.c:	Ensure all attachements marked as RFC822 emails will
